--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <svg id="clear">
       <use xlink:href="#icon-dele"></use>
     </svg>
+    <svg id="downLoad">
+      <use xlink:href="#icon-baocun"></use>
+    </svg>
   </div>
   <ol class="colors">
     <li id="black" class="black active"></li>
@@ -28,10 +31,10 @@
     <li id="green" class="green"></li>
   </ol>
   <ol class="sizes">
-    <li id="thin" class="thin"></li>
+    <li id="thin" class="thin active"></li>
     <li id="thick" class="thick"></li>
   </ol>
   <script src="./main.js"></script>
-  <script src="//at.alicdn.com/t/font_1054514_jls9lkl0p7h.js"></script>
+  <script src="//at.alicdn.com/t/font_1054514_xmxcb4fh29g.js"></script>
 </body>
 </html>
