--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <body>
   <canvas id="canvas" width="300" height="300"></canvas>
   <div id="actions" class="actions">
-    <svg id="brush" class="active">
+    <svg id="brush" class="icon active">
       <use xlink:href="#icon-pen"></use>
     </svg>
-    <svg id="eraser">
+    <svg id="eraser" class="icon">
       <use xlink:href="#icon-eraser"></use>
     </svg>
-    <svg id="clear">
+    <svg id="clear" class="icon">
       <use xlink:href="#icon-dele"></use>
     </svg>
-    <svg id="downLoad">
+    <svg id="downLoad" class="icon">
       <use xlink:href="#icon-baocun"></use>
     </svg>
   </div>
